--- a/src/Header.css
+++ b/src/Header.css
@@ -7,3 +7,10 @@
     top: 0;
     z-index: 100;
 }
+
+.header__logo {
+    width: 100px;
+    object-fit: contain;
+    margin: 0 20px;
+    margin-top: 18px;
+}
