--- a/src/Product.css
+++ b/src/Product.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: space-between;
+  /* justify-content: flex-end; */
   margin: 10px;
   padding: 20px;
   width: 100%;
